--- a/dada/extras/documentation/pod_source/features-profiles.pod
+++ b/dada/extras/documentation/pod_source/features-profiles.pod
@@ -2,7 +2,7 @@
 
 =head1 Dada Mail Profiles Overview
 
-Dada Mail Profiles allow subscribers to a Dada Mail list access to their own profile accounts within Dada Mail, where they can view their current subscriptions, update their subscription information (user-editable Subscriber Profile Fields) and also have additional permissions to subscriber-only features of Dada Mail mailing lists - as an example; archives that are only available to subscribers of a mailing list. 
+Dada Mail Profiles allow subscribers to a Dada Mail list access to their own profile accounts within Dada Mail, where they can view their current subscriptions, update their subscription information (user-editable Subscriber Profile Fields) and also have additional permissions to subscriber-only features of Dada Mail mailing lists (example; archives that are only available to subscribers of a mailing list). 
 
 =head1 Logging into your Dada Mail Profile
 
@@ -12,7 +12,7 @@ link that's currently on the top right of the Dada Mail screen:
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/regist_login_link.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/regist_login_link.jpg" /><br /> 
 <em>The, [Register/Log In] Link</em> 
 </p>
 
@@ -23,21 +23,20 @@ The Profile Login screen looks like this:
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/profile_login_scrn.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/profile_login_scrn.jpg" /><br /> 
 <em>The Profile Login Screen</em> 
 </p>
 
 =end html
 
-There are three separate forms, to log into a profile, register a new profile and to reset a lost password for a profile. Pretty standard stuff. 
-
+There are three separate forms: log into a profile, register a new profile and to reset a lost password for a profile.
 Once logged in, your subscriber will find themselves in the Profile Home screen: 
 
 
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/profile_logged_in.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/profile_logged_in.jpg" /><br /> 
 <em>The Profile Home Screen</em> 
 </p>
 
@@ -54,7 +53,7 @@ All the subscription forms in Dada Mail will be auto-filled out with the Dada Ma
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/default_screen_logged_in.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/default_screen_logged_in.jpg" /><br /> 
 <em>The Default Dada Mail screen with a logged in user</em> 
 </p>
 
@@ -71,7 +70,7 @@ For example, there are now options to only allow subscribers to view a list's ar
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/subscriber_only_archives.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/subscriber_only_archives.jpg" /><br /> 
 <em>Manage Archives - Archive Options</em> 
 </p>
 
@@ -82,7 +81,7 @@ There's also a new option to skip the closed-loop opt-in system, if a subscriber
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/skip_sub_if_reg.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/skip_sub_if_reg.jpg" /><br /> 
 <em>Manage List - Mailing List Options</em> 
 </p>
 
@@ -102,51 +101,89 @@ Subscriber Profile Fields can now also be easily re-ordered:
 =begin html 
 
 <p style="text-align:center">
-<img src="http:///dadamailproject.com/images/features/profile_fields/subscriber_fields.jpg" /><br /> 
+<img src="http://dadamailproject.com/images/features/profile_fields/subscriber_fields.jpg" /><br /> 
 <em>Manage Subscribers - Subsriber Fields</em> 
 </p>
 
 =end html
 
-=head1 Installing Dada Mail 4.0 with Subscriber Profile Fields
+=head1 Dada Mail Profile Options
 
-B<Note! This release is currently an alpha-quality release and is not recommended for production servers!> 
+You can change your Profiles Options in Dada Mail within your C<.dada_config> file. 
 
-We also do not suggest upgrading any previous Dada Mail to this release, as many of the SQL tables have changed and upgrade tools have not been created yet. 
+First, find the following lines in your C<.dada_config> file: 
 
-To install, follow the same installation instructions for Dada Mail 3.x at: 
+	=cut
+	# start cut for Dada Mail Profile Options
 
-L<http://dadamailproject.com/installation/>
+	$PROFILE_OPTIONS = { 
+		
+		enabled                         => 1, 
+		profile_email                   => '', 
+		enable_captcha                  => 1, 
+		enable_magic_subscription_forms => 1, 
+	
+		cookie_params =>
+		{ 
+			-name    => 'dada_profile',  
+			-path    => '/',
+			-expires => '+7d',		
+		},
 
-You will need the SQL backend for Dada Mail to take advantage of the new Dada Mail Profiles feature. 
-
-Profile Specific options are located in the C<Config.pm> file, as well as in the example C<.dada_config> file that comes with this release (I<dada/extras/examples/example_dada_config.txt>)
-
-As always, we suggest making the changes in the C<.dada_config> file. The variables look like in the example .dada_config file: 
-
-	# Dada Mail Profile Options
- 
-	$PROFILE_ENABLED                         = 1; 
-	$PROFILE_EMAIL                           = ''; 
-	$PROFILE_ENABLE_CAPTCHA                  = 1;
-	$PROFILE_ENABLE_MAGIC_SUBSCRIPTION_FORMS = 1;
- 
-	$PROFILE_COOKIE_PARAMS = {
-		-name   => 'dada_profile',  
-	    -path    => '/',
-	    -expires => '+7d',	
+		gravatar_options => 
+		{
+			enable_gravators     => 1, 
+			default_gravatar_url => undef,
+		},
 	};
- 
-	$PROFILE_GRAVATAR_OPTIONS = {
-		enable_gravators     => 1, 
-		default_gravatar_url => undef, 
-	};
- 
-	#/ Dada Mail Profile Options
 
-And are explained in the documentation for the Config.pm file. 
+	=cut
+	# end cut for Dada Mail Profile Options
 
-Make sure to set the, C<$PROFILE_EMAIL> variable, or profile registration may not work correctly!
+I<(if these lines are not present, you may add them to your .dada_config file)>
+
+Remove the following =cut lines (if present): 
+
+	=cut
+	# start cut for Dada Mail Profile Options
+
+	=cut
+	# end cut for Dada Mail Profile Options
+
+You can now configure your Profile Options. 
+
+=head2 $PROFILE_OPTIONS
+
+=head3 enabled
+
+Sets whether profiles are enabled, or not. Set to, C<1> to enable, set to C<0> to disable. 
+
+=head3 profile_email
+
+When a registration email or reset password email goes out, it'll go out on behalf of this email address. We highly encourage you to fill out this variable, or these email messages may not be sent out correctly. Example: 
+
+ profile_email => 'me@mydomain.com', 
+
+If Profiles are enabled and this variable is left blank, the list owner email address of one of your mailing lists will be used. 
+
+=head3 enable_captcha
+
+Registration for Dada Mail Profiles can be verified using a CAPTCHA. We recommend this feature, if it's available. Set this variable to, C<1> to enable CAPTCHA in the registration form. 
+
+=head3 enable_magic_subscription_forms
+
+B<Magic> subscription forms are pre-filled out with the subscriber's email address, if they're logged into Dada Mail. To enable this feature, set this variable to, C<1> 
+
+=head3 cookie_params
+
+This variable holds a few options to change the behavior of the session management cookie for Dada Mail Profiles. 
+
+=head3 gravatar_options
+
+Gravatars can also be enabled for Dada Mail Profiles. More information: 
+
+L<http://gravatar.com/> 
+
 
 =head1 Feedback Needed 
 
