--- a/dada/extras/documentation/pod_source/features-email_template_syntax.pod
+++ b/dada/extras/documentation/pod_source/features-email_template_syntax.pod
@@ -80,7 +80,7 @@ But, for something like January, it'll look like this:
 Will print out the name of the month. For October, this would print out, 
 
 	October
-	
+
 =item * <!-- tmpl_var date.abbr_named_month -->
 
 Will print out the name of the month, in an abbreviated form. For October, this would print out, 
@@ -180,7 +180,7 @@ You can then use these different tags to create different date formats.
 =item * 2011-Oct-17, Monday
 
 	<!-- tmpl_var date.year -->-<!-- tmpl_var date.abbr_named_month -->-<!-- tmpl_var date.day -->, <!-- tmpl_var date.day_of_the_week -->
-	
+
 =back
 
 =head4 Middle endian forms
@@ -199,7 +199,7 @@ You can then use these different tags to create different date formats.
 
 =head4 Flexible Date and Time formats
 
-If the included simple date tags are not enough, Dada Mail has support for C<strftime> formatting using the CPAN Module, C<Time::Piece>
+If the included simple date tags are not enough, Dada Mail has support for C<strftime> formatting.
 
 The formatting is documented at:
 
@@ -211,9 +211,9 @@ L<http://php.net/manual/en/function.strftime.php>
 
 it's the same thing. 
 
-To use this in Dada Mail's templating syntax, use the C<E<lt>!-- tmpl_time_piece --E<gt> tag, like this: 
+To use this in Dada Mail's templating syntax, use the C<E<lt>!-- tmpl_tmpl_strftime --E<gt> tag, like this: 
 
-	<!-- tmpl_time_piece %a, %d %b %Y -->
+	<!-- tmpl_strftime %a, %d %b %Y -->
 
 This will print out,
 
